--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- index.html -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Website Title</title>
     <link rel="stylesheet" href="styles.css">
+    <script defer src="script.js"></script>
 </head>
 <body>
 
@@ -33,7 +36,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2023 Iffat Abdul Azeez</p>
+        <p>&copy; 2023 Your Name</p>
     </footer>
 
 </body>
