--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <header>
-        <h1>Your Website Name</h1>
+        <h1>Iffat's Website</h1>
         <p>Welcome to my website!</p>
     </header>
 
@@ -23,11 +23,16 @@
     <main>
         <section>
             <h2>About Me</h2>
-            <p>This is a brief description of myself.</p>
+            <p>
+                I am a second year student at Monash studying a Bachelor of Computer 
+                Science. 
+            </p>
         </section>
 
         <section>
             <h2>My Projects</h2>
+            Sentiment analysis
+            Voice automated grocery order
             <!-- Add your project details here -->
         </section>
 
